# logos-execution-zone

./: .deny.toml  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  cliff.toml  deny.toml  flake.nix  keycard_test_3.sh  keycard_tests.sh  keycard_tests_2.sh  wallet_with_keycard.sh
.github/workflows/: ci.yml  pr-title.yml  publish_image.yml  publish_images.yml  release.yml
bedrock/: cfgsync.yaml  deployment-settings.yaml  docker-compose.yml  node-config.yaml
bedrock/scripts/: run_logos_blockchain_node.sh
bedrock_client/: Cargo.toml
bedrock_client/src/: lib.rs
common/: Cargo.toml
common/src/: block.rs  config.rs  lib.rs  receipt.rs  simulation.rs  snapshot.rs  test_utils.rs  transaction.rs
common/src/rpc_primitives/: errors.rs  message.rs
completions/: README.md
completions/bash/: wallet
completions/zsh/: _wallet
configs/docker-all-in-one/: indexer_config.json  sequencer_config.json
configs/docker-all-in-one/sequencer/: sequencer_config.json
docs/: general_calls_via_tail_c_calls.md  protocol.md
docs/LEZ testnet v0.1 tutorials/: associated-token-accounts.md  keycard.md  token-transfer.md
examples/program_deployment/: Cargo.toml
explorer_service/: Cargo.toml
explorer_service/src/: api.rs
explorer_service/src/components/: block_preview.rs  transaction_preview.rs
explorer_service/src/pages/: transaction_page.rs
indexer/core/: Cargo.toml
indexer/core/src/: block_store.rs  config.rs  lib.rs
indexer/service/configs/: indexer_config.json
indexer/service/protocol/: Cargo.toml
indexer/service/src/: lib.rs  mock_service.rs  service.rs
indexer_ffi/: Cargo.toml  build.rs  cbindgen.toml  indexer_ffi.h
indexer_ffi/src/: client.rs  errors.rs  indexer.rs  lib.rs
indexer_ffi/src/api/: client.rs  convert.rs  lifecycle.rs  memory.rs  mod.rs  query.rs  result.rs  types.rs
indexer_ffi/src/api/types/: account.rs  block.rs  mod.rs  transaction.rs  vectors.rs
indexer_service_ffi/: Cargo.toml
indexer_service_ffi/src/: main.rs
integration_tests/: Cargo.toml
integration_tests/src/: config.rs  indexer_client.rs  lib.rs  setup.rs  test_context_ffi.rs
integration_tests/tests/: account.rs  amm.rs  ata.rs  forum.rs  general_calls.rs  group_pda.rs  indexer.rs  indexer_ffi.rs  keys.rs  keys_restoration.rs  pinata.rs  private_pda.rs  program_deployment.rs  token.rs  tps.rs  wallet_ffi.rs
integration_tests/tests/auth_transfer/: private.rs  public.rs
key_protocol/: Cargo.toml
key_protocol/src/: initial_state.rs  lib.rs
key_protocol/src/key_management/: group_key_holder.rs  mod.rs  secret_holders.rs
key_protocol/src/key_protocol_core/: mod.rs
keycard_wallet/: Cargo.toml
keycard_wallet/src/: lib.rs  python_path.rs
lez_sdk/: Cargo.toml
lez_sdk/src/: lib.rs  macros.rs  routing.rs
lez_sdk_macros/: Cargo.toml
lez_sdk_macros/src/: lib.rs
logos_moderation_sdk/: Cargo.toml
logos_moderation_sdk/src/: lib.rs  types.rs  wasm_bindings.rs
logos_moderation_sdk/src/clients/: aggregator.rs  member.rs  mod.rs  moderator.rs
logos_moderation_sdk/src/crypto/: mod.rs  sss.rs
logos_moderation_sdk/src/crypto/signature/: mod.rs  private_key.rs  public_key.rs
mempool/src/: lib.rs
nssa/: Cargo.toml
nssa/core/: Cargo.toml
nssa/core/src/: account.rs  circuit_io.rs  commitment.rs  error.rs  lib.rs  nullifier.rs  program.rs
nssa/core/src/encryption/: mod.rs  shared_key_derivation.rs
nssa/core/src/signature/: mod.rs  private_key.rs  public_key.rs
nssa/src/: base64.rs  error.rs  lib.rs  program.rs  state.rs  validated_state_diff.rs
nssa/src/encoding/: public_transaction.rs
nssa/src/merkle_tree/: mod.rs
nssa/src/privacy_preserving_transaction/: circuit.rs  message.rs  transaction.rs  witness_set.rs
nssa/src/program_deployment_transaction/: transaction.rs
nssa/src/public_transaction/: execution.rs  message.rs  mod.rs  transaction.rs  witness_set.rs
nssa/src/signature/: bip340_test_vectors.rs  mod.rs  private_key.rs  public_key.rs
program_methods/guest/: Cargo.toml
programs/amm/: Cargo.toml
programs/amm/src/: add.rs  lib.rs  new_definition.rs  remove.rs  swap.rs  tests.rs
programs/authenticated_transfer/core/: Cargo.toml
programs/clock/core/: Cargo.toml
programs/membership_registry/: Cargo.toml
programs/membership_registry/src/: initialize.rs  lib.rs  register.rs  slash.rs  state.rs
python/: keycard_test.py  keycard_wallet.py
python/keycard-py/keycard/: constants.py  keycard.py
python/keycard-py/tests/: test_keycard.py
scripts/: tutorial-smoke-test.sh
sequencer/core/: Cargo.toml
sequencer/core/src/: block_publisher.rs  block_settlement_client.rs  block_store.rs  config.rs  lib.rs  mock.rs
sequencer/service/: Cargo.toml  Dockerfile  docker-compose.yml
sequencer/service/rpc/: Cargo.toml
sequencer/service/rpc/src/: lib.rs
sequencer/service/src/: fork.rs  lib.rs  main.rs  service.rs
sequencer_core/: Cargo.toml
sequencer_core/src/: block_publisher.rs  block_settlement_client.rs  block_store.rs  config.rs  lib.rs  mock.rs
sequencer_rpc/: Cargo.toml
sequencer_rpc/src/: lib.rs  process.rs
sequencer_runner/configs/debug/: sequencer_config.json
sequencer_runner/configs/docker/: sequencer_config.json
sequencer_runner/src/: lib.rs
storage/: Cargo.toml
storage/src/: indexer.rs  lib.rs  sequencer.rs
storage/src/cells/: mod.rs  shared_cells.rs
storage/src/indexer/: indexer_cells.rs  mod.rs  read_multi_get.rs  read_multiple.rs  read_once.rs  write_atomic.rs  write_batch.rs  write_non_atomic.rs  write_once.rs
storage/src/sequencer/: mod.rs  sequencer_cells.rs
storage/src/storable_cell/: mod.rs
test_program_methods/: Cargo.toml
test_program_methods/guest/: Cargo.toml
testnet_initial_state/src/: lib.rs
wallet/: Cargo.toml
wallet-ffi/: Cargo.toml  wallet_ffi.h
wallet-ffi/src/: account.rs  error.rs  keys.rs  lib.rs  pinata.rs  sync.rs  transfer.rs  types.rs  wallet.rs
wallet/src/: account.rs  chain_storage.rs  config.rs  helperfunctions.rs  lib.rs  main.rs  pinata_interactions.rs  poller.rs  privacy_preserving_tx.rs  storage.rs  transaction_utils.rs
wallet/src/cli/: account.rs  (+7 more)
(+41 files in other folders)
