[package]
name = "bedrock_client"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
common.workspace = true

reqwest.workspace = true
anyhow.workspace = true
tokio-retry.workspace = true
futures.workspace = true
log.workspace = true
serde.workspace = true
humantime-serde.workspace = true
logos-blockchain-zone-sdk.workspace = true
