[package]
edition = "2024"
license = { workspace = true }
name = "indexer_ffi"
version = "0.1.0"

[dependencies]
nssa_core.workspace = true
nssa.workspace = true
indexer_service.workspace = true
sequencer_core.workspace = true
indexer_service_rpc.workspace = true

url.workspace = true
log = { workspace = true }
tokio = { features = ["rt-multi-thread"], workspace = true }

[build-dependencies]
cbindgen = "0.29"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
name = "indexer_ffi"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = [
  "cbindgen",
] # machete does not recognize this for build dep and complains.
